# v-c-it

./: .gitignore  README.md  meson.build  meson_options.txt  run_integration_tests.sh
include/helpers/: cert_helpers.h  conn_helpers.h  ping_protocol.h  status_codes.h
include/helpers/ping_protocol/: data.h  serialization.h  verbs.h
src/: meson.build
src/helpers/: agentd_connection_init.c  create_next_transaction_cert.c  create_transaction_cert.c  entity_private_certificate_create_from_file.c  entity_public_certificate_create_from_file.c  find_transaction_in_block.c  get_and_verify_artifact_first_txn_id.c  get_and_verify_artifact_last_txn_id.c  get_and_verify_block.c  get_and_verify_block_id_by_height.c  get_and_verify_last_block_id.c  get_and_verify_next_block_id.c  get_and_verify_next_txn_id.c  get_and_verify_prev_block_id.c  get_and_verify_prev_txn.c  get_and_verify_status.c  get_and_verify_txn.c  get_and_verify_txn_block_id.c  send_and_verify_close_connection.c  send_and_verify_enable_extended_api.c  send_and_verify_ping_request.c  submit_and_verify_txn.c
src/helpers/ping_protocol/: ping_protocol_sendreq_ping.c  ping_protocol_sendreq_ping_response.c  verbs.c
src/multi_ping_client/: main.c  meson.build
src/multiple_status_close/: main.c  meson.build
src/ping_client/: main.c  meson.build
src/ping_sentinel/: main.c  meson.build
src/status_close/: main.c  meson.build
src/submit_multiple_txns/: main.c  meson.build
src/submit_txn_and_read_block/: main.c  meson.build
src/test_get_latest_block_empty/: main.c  meson.build
src/test_handshake/: main.c  meson.build
subprojects/: agentd.wrap  gtest.wrap  libevent.wrap  lmdb.wrap  minunit.wrap  rcpr.wrap  vcblockchain.wrap  vccert.wrap  vccrypt.wrap  vcdb.wrap  vcmodel.wrap  vctool.wrap
tests/: 0000_startup_shutdown.sh  0001_unauthorized_handshake.sh  0002_authorized_handshake.sh  0003_get_latest_block_empty.sh  0004_submit_txn_and_read_block.sh  0005_submit_multiple_txns.sh  0006_status_close.sh  0007_multiple_status_close.sh  0008_multiple_status_close_x1000.sh  0009_readconfig_endorser_key_not_set.sh  0010_readconfig_endorser_key_set.sh  0011_extended_api_ping.sh  0012_extended_api_ping_reregistration.sh  0013_extended_api_mult_ping.sh  0014_extended_api_mult_ping_5mb.sh
